tdf#102266 Try to keep HUD up to date

Recent HUD versions don't seem to support the activation
callback, so we have to update menus in the background.

(regression of 15436c009e756dd4c94046f9849ad5a186454af8)

TODO: Is this manual iteration in GtkSalMenu::SetItemText
worth it, or maybe simply calling Update() will be good
enough, too?

Change-Id: I7f08c3518e1767915d84036cdce7f678961595ef