vcl/inc/unx/gtk/gtksalmenu.hxx
@@ -45,6 +45,7 @@ private:
     std::vector< GtkSalMenuItem* >  maItems;
     Idle                            maUpdateMenuBarIdle;
 
+    bool                            mbInActivateCallback;
     bool                            mbMenuBar;
     bool                            mbNeedsUpdate;
     bool                            mbReturnFocusToDocument;
